Archive2/29/9c4964f57ed177/output
main.cpp: In function 'int main()':
main.cpp:24:16: error: no match for 'operator<' (operand types are 'main()::TestPair' and 'main()::TestPair')
     TestPair() < TestPair(); // error
                ^
